crates/ruau/tests/compile/scope_callback_capture.stderr
error[E0728]: `await` is only allowed inside `async` functions and blocks
  --> tests/compile/scope_callback_capture.rs:11:41
   |
 5 |     lua.scope(|scope| {
   |               ------- this is not `async`
...
11 |         f.call::<()>(lua.create_table().await?)?;
   |                                         ^^^^^ only allowed inside `async` functions and blocks
